[package]
authors     = { workspace = true }
build       = 'build.rs'
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2021'
homepage    = 'https://parallel.fi'
license     = 'Apache'
name        = 'parallel'
repository  = { workspace = true }
version     = '1.9.8'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec                  = { package = 'parity-scale-codec', version = '3.1.5' }
derive_more            = '0.15.0'
frame-benchmarking     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
hex-literal            = '0.3.4'
jsonrpsee              = { version = "0.16.2", features = ["server", "macros"] }
log                    = '0.4.13'
futures                = { version = '0.3.1', features = ["compat"] }
async-trait            = '0.1.42'

primitives = { package = 'parallel-primitives', path = '../../primitives' }

pallet-loans-rpc                           = { path = '../../pallets/loans/rpc' }
pallet-router-rpc                          = { path = '../../pallets/router/rpc' }
pallet-transaction-payment-rpc             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

# runtimes
heiko-runtime                              = { path = '../../runtime/heiko' }
parallel-runtime                           = { path = '../../runtime/parallel' }
kerria-runtime                             = { path = '../../runtime/kerria' }
vanilla-runtime                            = { path = '../../runtime/vanilla' }

sc-basic-authorship     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-chain-spec           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-cli                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36'}
sc-client-api           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-consensus            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-executor             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36'}
sc-keystore             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-rpc                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-rpc-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-service              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36'}
sc-telemetry            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-tracing              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-transaction-pool     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-network              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-network-common       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-consensus-aura       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-consensus-manual-seal = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
try-runtime-cli              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', optional = true }

clap         = { version = '4.0.9', features = ['derive'] }
serde        = { version = '1.0.136', features = ['derive'] }
serde_json   = '1.0.79'
tracing-core = '0.1.30'

orml-oracle-rpc            = { version = '0.4.1-dev', default-features = false }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.36" }

sp-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-block-builder    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-blockchain       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-consensus        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-consensus-aura   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-core             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-inherents        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-keystore         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-offchain         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-runtime          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-session          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-std              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-storage          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-timestamp        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-trie             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-io               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', optional = true }

cumulus-client-cli                      = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-collator                 = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-consensus-aura           = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-network                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-service                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-primitives-core                 = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-primitives-parachain-inherent   = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-interface           = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-rpc-interface       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-consensus-common         = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-consensus-relay-chain    = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-minimal-node        = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }

polkadot-cli        = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36', features = ['kusama-native'] }
polkadot-parachain  = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }
polkadot-service    = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }

# Frontier dependencies
fc-consensus = { version='2.0.0-dev' }
fc-db = { version='2.0.0-dev' }
fc-mapping-sync = { version='2.0.0-dev' }
fc-rpc = { version='2.0.0-dev', features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { version='1.1.0-dev' }
fp-consensus = { version='2.0.0-dev' }
fp-evm = { version='3.0.0-dev', default-features = false }
fp-storage = { version='2.0.0' }
fp-dynamic-fee = { version='1.0.0' }
fp-rpc                          = { version='3.0.0-dev'}
fp-self-contained               = { version='1.0.0-dev'}
pallet-base-fee                 = { version='1.0.0'}
pallet-ethereum                 = { version='4.0.0-dev', features = ['forbid-evm-reentrancy']}
pallet-evm                      = { version='6.0.0-dev', features = ['forbid-evm-reentrancy']}


[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

[[bin]]
name = 'parallel'

[features]
default            = ['std']
runtime-benchmarks = [
  'parallel-runtime/runtime-benchmarks',
  'heiko-runtime/runtime-benchmarks',
  'vanilla-runtime/runtime-benchmarks',
  'kerria-runtime/runtime-benchmarks',
  'polkadot-service/runtime-benchmarks',
  "try-runtime-cli",
]
std                = []
try-runtime        = [
  'heiko-runtime/try-runtime',
  'parallel-runtime/try-runtime',
  'vanilla-runtime/try-runtime',
  'kerria-runtime/try-runtime',
  'polkadot-service/try-runtime',
  'try-runtime-cli/try-runtime',
  'sp-io',
]
