[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-amm'
version = '1.7.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '2.3.1', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
pallet-assets      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
primitives         = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
scale-info         = { version = '1.0', default-features = false, features = ['derive'] }
serde              = { version = '1', features = ['derive'], optional = true }
sp-arithmetic      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }

[dev-dependencies]
pallet-balances         = { branch = 'polkadot-v0.9.11', git = 'https://github.com/paritytech/substrate.git' }
pallet-currency-adapter = { path = '../currency-adapter' }
sp-core                 = { branch = 'polkadot-v0.9.11', git = 'https://github.com/paritytech/substrate.git' }
sp-io                   = { branch = 'polkadot-v0.9.11', git = 'https://github.com/paritytech/substrate.git' }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'serde',
  'codec/std',
  'frame-benchmarking/std',
  'frame-support/std',
  'frame-system/std',
  'primitives/std',
  'sp-arithmetic/std',
  'sp-runtime/std',
  'sp-std/std',
  'pallet-assets/std',
  'scale-info/std',
]
try-runtime        = ['frame-support/try-runtime']
