[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-amm'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# codec              = { workspace = true, features = ['max-encoded-len'] }
codec         = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
num-traits         = { workspace = true }
pallet-assets      = { workspace = true }
pallet-traits      = { workspace = true }
primitives         = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
serde              = { workspace = true, features = ['derive'], optional = true }
sp-arithmetic      = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
pallet-balances         = { workspace = true, features = ['std'] }
pallet-currency-adapter = { workspace = true, features = ['std'] }
sp-core                 = { workspace = true, features = ['std'] }
sp-io                   = { workspace = true, features = ['std'] }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking', 'frame-system/runtime-benchmarks']
std                = [
  'serde',
  'codec/std',
  'frame-benchmarking/std',
  'frame-support/std',
  'frame-system/std',
  'primitives/std',
  'sp-arithmetic/std',
  'sp-runtime/std',
  'sp-std/std',
  'pallet-assets/std',
  'scale-info/std',
  'num-traits/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
