[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-asset-registry'
version = { workspace = true }

[dependencies]
log   = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-traits      = { workspace = true }
# parity-scale-codec = { version = '3.1.5', default-features = false, features = ['derive'] }
# codec              = { workspace = true, features = ['derive'] }
codec             = { package = 'parity-scale-codec', version = '3.1.5', default-features = false, features = ['derive'] }
scale-info         = { workspace = true, features = ['derive'] }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

# Polkadot
xcm = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core         = { workspace = true }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'frame-support/std',
  'frame-system/std',
  'codec/std',
  'pallet-traits/std',
  'scale-info/std',
  'serde',
  'sp-io/std',
  'sp-runtime/std',
  'sp-std/std',
  'xcm/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
