[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-bridge'
version = '1.8.3'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
scale-info         = { version = '1.0', default-features = false, features = ['derive'] }

pallet-assets     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
pallet-balances   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
pallet-membership = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
primitives        = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
sp-runtime        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-std            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }

[dev-dependencies]
pallet-currency-adapter = { path = '../currency-adapter' }
sp-core                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-io                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'primitives/std',
  'pallet-collective/std',
  'pallet-membership/std',
  'pallet-balances/std',
  'sp-runtime/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
