[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-bridge'
version = '1.9.4'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.1.5', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }
scale-info         = { version = '2.1', default-features = false, features = ['derive'] }

pallet-assets     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }
pallet-balances   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }
pallet-membership = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }
primitives        = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
sp-runtime        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }
sp-std            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', default-features = false }

[dev-dependencies]
pallet-currency-adapter = { path = '../currency-adapter' }
sp-core                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-io                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'primitives/std',
  'pallet-assets/std',
  'pallet-membership/std',
  'pallet-balances/std',
  'sp-runtime/std',
  'sp-std/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
