[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-bridge'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.1.5', default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }

pallet-assets     = { workspace = true }
pallet-balances   = { workspace = true }
pallet-membership = { workspace = true }
primitives        = { workspace = true }
sp-runtime        = { workspace = true }
sp-std            = { workspace = true }

[dev-dependencies]
pallet-currency-adapter = { workspace = true, features = ['std'] }
sp-core                 = { workspace = true, features = ['std'] }
sp-io                   = { workspace = true, features = ['std'] }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'primitives/std',
  'pallet-assets/std',
  'pallet-membership/std',
  'pallet-balances/std',
  'sp-runtime/std',
  'sp-std/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
