[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-chainlink-adapter'
version = '1.7.5'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec                        = { package = 'parity-scale-codec', version = '2.3.1', features = ['max-encoded-len'], default-features = false }
frame-support                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
primitives                   = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
scale-info                   = { version = '1.0', default-features = false, features = ['derive'] }
sp-runtime                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-std                       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-chainlink-feed        = { git = "https://github.com/smartcontractkit/chainlink-polkadot", branch = "polkadot-v0.9.12", default-features = false }
orml-oracle                  = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-traits                  = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
[features]
default     = ['std']
std         = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-std/std',
  'scale-info/std',
  'primitives/std',
  'pallet-chainlink-feed/std',
  'orml-traits/std',
  'orml-oracle/std',
]
try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false
