[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-crowdloans'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-assets      = { workspace = true }
pallet-traits      = { workspace = true }
pallet-xcm         = { workspace = true }
pallet-xcm-helper  = { workspace = true }
primitives         = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
xcm                = { workspace = true }
parallel-support   = { workspace = true }

[dev-dependencies]
cumulus-pallet-dmp-queue        = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm              = { workspace = true }
cumulus-pallet-xcmp-queue       = { workspace = true }
kusama-runtime                  = { workspace = true, features = ['runtime-benchmarks'] }
orml-traits                     = { workspace = true }
orml-xcm-support                = { workspace = true }
orml-xtokens                    = { workspace = true }
pallet-babe                     = { workspace = true }
pallet-balances                 = { workspace = true }
pallet-session                  = { workspace = true }
pallet-timestamp                = { workspace = true }
pallet-utility                  = { workspace = true }
parachain-info                  = { workspace = true }
polkadot-core-primitives        = { workspace = true }
polkadot-parachain              = { workspace = true }
polkadot-runtime-common         = { workspace = true }
polkadot-runtime-parachains     = { workspace = true }
polkadot-cli                    = { workspace = true }
serde                           = { workspace = true }
sp-core                         = { workspace = true }
sp-io                           = { workspace = true }
xcm-builder                     = { workspace = true }
xcm-executor                    = { workspace = true }
xcm-simulator                   = { workspace = true }
bytes                           = { workspace = true }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'sp-std/std',
  'scale-info/std',
  'primitives/std',
  'pallet-assets/std',
  'xcm/std',
  'pallet-xcm-helper/std',
  'pallet-xcm/std',
  'pallet-traits/std',
  'parallel-support/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest    = false
proc-macro = false
