[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-crowdloans'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { workspace = true, package = 'parity-scale-codec', features = ['max-encoded-len'] }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-assets      = { workspace = true }
pallet-traits      = { workspace = true }
pallet-xcm         = { workspace = true }
pallet-xcm-helper  = { workspace = true }
primitives         = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
xcm                = { workspace = true }
parallel-support   = { workspace = true }

[dev-dependencies]
cumulus-pallet-dmp-queue        = { workspace = true, features = ['std'] }
cumulus-pallet-parachain-system = { workspace = true, features = ['std'] }
cumulus-pallet-xcm              = { workspace = true, features = ['std'] }
cumulus-pallet-xcmp-queue       = { workspace = true, features = ['std'] }
kusama-runtime                  = { workspace = true, features = ['runtime-benchmarks'] }
orml-traits                     = { workspace = true, features = ['std'] }
orml-xcm-support                = { workspace = true, features = ['std'] }
orml-xtokens                    = { workspace = true, features = ['std'] }
pallet-babe                     = { workspace = true, features = ['std'] }
pallet-balances                 = { workspace = true, features = ['std'] }
pallet-session                  = { workspace = true, features = ['std'] }
pallet-timestamp                = { workspace = true, features = ['std'] }
pallet-utility                  = { workspace = true, features = ['std'] }
parachain-info                  = { workspace = true, features = ['std'] }
polkadot-core-primitives        = { workspace = true }
polkadot-parachain              = { workspace = true, features = ['std'] }
polkadot-runtime-common         = { workspace = true, features = ['std'] }
polkadot-runtime-parachains     = { workspace = true }
polkadot-cli                    = { workspace = true }
serde                           = { workspace = true }
sp-core                         = { workspace = true, features = ['std'] }
sp-io                           = { workspace = true, features = ['std'] }
xcm-builder                     = { workspace = true, features = ['std'] }
xcm-executor                    = { workspace = true, features = ['std'] }
xcm-simulator                   = { workspace = true }
bytes                           = { workspace = true }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'sp-std/std',
  'scale-info/std',
  'primitives/std',
  'pallet-assets/std',
  'xcm/std',
  'pallet-xcm-helper/std',
  'pallet-xcm/std',
  'pallet-traits/std',
  'parallel-support/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest    = false
proc-macro = false
