[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-currency-adapter'
version = '1.8.3'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec         = { package = 'parity-scale-codec', version = '2.3.1', features = ['max-encoded-len'], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
frame-system  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
primitives    = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
scale-info    = { version = '1.0', default-features = false, features = ['derive'] }
sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }

[features]
default     = ['std']
std         = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'scale-info/std',
  'primitives/std',
]
try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false
